--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -12,6 +12,21 @@ input{
     background-color: transparent;
 }
 
+.ui.basic.segment.appLayout{
+  padding-left: 225px;
+  margin-top: 7em;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  
+}
+
+.account{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*home page styles*/
 
 .masthead {
