--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     background-color: #EAEAEA !important;
 }
@@ -13,11 +17,8 @@ input{
 }
 
 .ui.basic.segment.appLayout{
-  padding-left: 225px;
+  padding-left: 280px;
   margin-top: 7em;
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
   
 }
 
